src/snapshots/afrotd__parser__tests__interpretation_9.1.2_2.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 9
  - 1
  - 2
index: 2
text: "Ballträger A1 schlägt den Tackler B6 mit seinem ausgestreckten\nUnterarm, unmittelbar bevor B6 ihn tackeln kann."
ruling: "Persönliches Foul. Strafe – 15 Meter. Die Strafe wird vom Previous Spot durchgeführt, wenn sich das Foul hinter der neutralen Zone ereignet. Disqualifikation des Verursachers bei schweren Fouls. Safety, wenn sich das\nFoul in Team A’s Endzone ereignet."
