src/snapshots/afrotd__parser__tests__interpretation_9.1.3_1.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 9
  - 1
  - 3
index: 1
text: "Passer A12 befindet sich in der Tackle Box und schaut nach einem freien Receiver. Kurz bevor oder gleichzeitig mit dem Wurf des\nBalles wird A12 von der Seite an den Rippen, dem Oberschenkel oder\nam Knie von B79 berührt, der mit der Helmoberseite voran durch ein\nTargeting A12 angriff."
ruling: "Foul durch B79 wegen Targeting und\nHerbeiführen eines Forcible Contact mit der Helmoberseite. Automatische Disqualifikation."
