src/snapshots/afrotd__parser__tests__interpretation_9.1.4_1.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 9
  - 1
  - 4
index: 1
text: "Receiver A83 springt in die Luft, um einen Vorwärtspass zu erreichen. Als er mit dem Ball landet und im Begriff ist, seine Balance zu\nfinden, wird er von B45 berührt, als dieser mit seinem Helm oder seiner\nSchulter voran gegen A83 prallt, der dabei über seiner Schulterpartie\nvon B45 getroffen wird."
ruling: "Foul durch B45 für Targeting gegen einen verteidigungslosen Spieler und Herbeiführen eines Forcible\nContact über dessen Schultern. 15 Meter und automatisch First Down,\nsowie automatische Disqualifikation von B45."
