src/snapshots/afrotd__parser__tests__interpretation_9.1.4_2.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 9
  - 1
  - 4
index: 2
text: "Als der Ballträger A20 um den letzten Spieler am Ende seiner\nScrimmage Line herumläuft und downfield advanct, senkt er seinen\nKopf und berührt Defensive End B89, als dieser versucht, A20 zu tackeln. B89’s Kopf ist hoch und die Helme der beiden Spieler prallen\ngegeneinander."
ruling: "Kein Foul. Weder A20 noch B89 sind verteidigungslose Spieler und kein Spieler hat im Sinne der Regel 9.1.3\nseinen Gegner durch ein Targeting angegriffen."
