src/snapshots/afrotd__parser__tests__interpretation_9.1.4_4.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 9
  - 1
  - 4
index: 4
text: "A12, der normalerweise auf der Quarterback Position spielt, hat\nsich als Wide Receiver im Offense Backfield aufgestellt. A33 befindet\nsich fünf Meter hinter dem Snapper in einer „Shotgun Formation“. Nach\ndem Snap läuft A12 downfield und A33 versucht einen Vorwärtspass\nauf A12 zu werfen. Der Vorwärtspass wird abgefangen. Während des\nInterception Returns springt B55 auf A33 zu und trifft ihn mit einem\nArm seitlich am Helm."
ruling: "Foul von B55 für Targeting und Herbeiführen eines Kontakts am Kopf eines verteidigungslosen Spielers.\nBezüglich Regel 2.27.14 ist A33 ein verteidigungsloser Spieler, weil er\nin dem Down die Position des Quarterbacks eingenommen hat."
