src/snapshots/afrotd__parser__tests__interpretation_9.1.4_5.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 9
  - 1
  - 4
index: 5
text: "A81 hat sich als Split End weit außen auf der linken Seite der\nOffense Formation aufgestellt. B89 hat sich an seiner Scrimmage Line\nzwischen A81 und dem nächsten an der Scrimmage Line stehenden\nOffense Lineman aufgestellt. B89 konzentriert sich auf den Ballträger\nund hat A81 aus den Augen verloren. A81 läuft nach innen, zielt auf\nB89 und springt in dessen Richtung. Er trifft mit seinem Unterarm B89\nan dessen Hals."
ruling: "Foul von A81, Illegaler Blind Side Block mit\nTargeting. Gemäß Regel 9.1.4 ist das eine 15-Meterstrafe, A81 wird disqualifiziert. B89 ist verteidigungslos, weil er in diesem Fall einen Block\nvon einer Seite erhalten hat, auf die er sich nicht konzentriert (Blind\nSide) (Regel 2.27.14)."
