src/snapshots/afrotd__parser__tests__interpretation_9.1.4_7.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 9
  - 1
  - 4
index: 7
text: "Bei einem Punt Return springt B44 von der Blind Side mit der\nSchulter voran vorwärts-aufwärts gegen A66. Er trifft ihn dabei seitlich\nunterhalb der Schulter."
ruling: "Persönliches Foul, Illegaler Blind Side Block. 15-Meterstrafe. A66 ist ein verteidigungsloser Spieler und B44\nführt einen Blind Side Block aus. Das ist jedoch kein Targeting, weil der\nKontakt sich nicht auf den Kopf-/Halsbereich erstreckte."
