src/snapshots/afrotd__parser__tests__interpretation_9.1.6_1.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 9
  - 1
  - 6
index: 1
text: "1. und 10 von der A-40. Back A44 hat sich hinter dem rechten\nTackle A69 aufgestellt. Dabei befindet sich A44’s linker Fuß innerhalb\nvon A69’s äußerem Fuß. Beim Snap läuft A44 nach links durch das Offense Backfield und blockt B77 von der Seite unter der Gürtellinie. Zum\nZeitpunkt des Blocks befindet sich B77 innerhalb der Tackle Box einen\nMeter im Offense Backfield. Beim Lauf erzielt A33 einen Raumgewinn\nvon 12 Metern."
ruling: "Illegaler tiefer Block durch A44, denn der\nBlock kommt nicht direkt von vorne. Stationäre Backs, die sich innerhalb der Tackle Box aufgestellt haben, dürfen unter der Gürtellinie in der\nTackle Box blocken, solange der Ball die Tackle Box noch nicht verlassen hat, solange der Block direkt von vorne erfolgt. Die 15-Meterstrafe\nwird vom Previous Spot geahndet. A’s Ball, 1. und 25 von der A-25."
